--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,45 @@
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+#
+# If you need help with YAML syntax, here are some quick references for you:
+# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
+# https://learnxinyminutes.com/docs/yaml/
+#
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+
+title: De-Silva Machine Intelligence Lab
+author: Loughborough De-Silva Machine Intelligence Research Team
+description: Loughborough University London De-Silva Machine Intelligence Research Lab
+email: ldmirl@lboro.ac.uk
+url: "ldmirl.github.io"
+
+
+# Build settings
+encoding: UTF-8
+highlighter: rouge
+plugins:
+  - jekyll-sitemap
+  # - jekyll-postcss
+  - jekyll-github-metadata
+  - jekyll-seo-tag
+
 exclude:
   - node_modules
   - script
 
 sass:
   style: :compressed
-
-theme: jekyll-theme-primer
 
 github:
   private: false
@@ -15,6 +49,3 @@ github:
     branch: "master"
     path: "/"
   repository_url: "https://github.com/ldmirl/ldmirl.github.io"
-  
-title: De-Silva Machine Intelligence Lab 
-description: Loughborough University London
